# spring-framework-jni-client-sample

./: .gitignore  README.md
java/client/: pom.xml
java/client/src/main/java/com/github/kgrech/statcollectior/client/: Main.java
java/client/src/main/java/com/github/kgrech/statcollectior/client/api/: StatisticsUpdater.java  StatisticsUpdaterIml.java
java/client/src/main/java/com/github/kgrech/statcollectior/client/monitor/: ClientMonitor.java  CpuChecker.java  MemoryChecker.java  ProcessesChecker.java  StatisticChecker.java
java/client/src/main/resources/: log4j.properties
java/client/src/test/java/com/github/kgrech/statcollectior/client/api/: CheckerTests.java  ClientMonitorTest.java  StatisticsUpdaterTest.java
java/server/: pom.xml
java/server/src/main/java/com/github/kgrech/statcollectior/server/: StatCollectorServerApplication.java
java/server/src/main/java/com/github/kgrech/statcollectior/server/config/: ClientsDetailsService.java  GlobalControllerExceptionHandler.java  (+4 more)
java/server/src/main/resources/: clients.xml  clients.xsd  mail.properties  mongo.properties  recordFactory.properties
java/server/src/test/resources/: clients.xml
native/: CMakeLists.txt  com_github_kgrech_statcollectior_client_monitor_CpuChecker.cpp  com_github_kgrech_statcollectior_client_monitor_CpuChecker.h  com_github_kgrech_statcollectior_client_monitor_MemoryChecker.cpp  com_github_kgrech_statcollectior_client_monitor_MemoryChecker.h  com_github_kgrech_statcollectior_client_monitor_ProcessesChecker.cpp  com_github_kgrech_statcollectior_client_monitor_ProcessesChecker.h
(+30 files in other folders)
